--- a/.jshintrc
+++ b/.jshintrc
@@ -1,23 +1,18 @@
 {
-	"camelcase": true,
 	"curly": true,
 	"eqeqeq": true,
 	"forin": true,
-	"immed": true,
+	"futurehostile": true,
 	"latedef": true,
-	"newcap": true,
 	"noarg": true,
-	"noempty": true,
+	"nocomma": true,
 	"nonew": true,
-	"quotmark": "single",
+	"strict": true,
 	"undef": true,
 	"unused": true,
-	"strict": true,
-	"maxparams": 3,
-	"maxcomplexity": 5,
 
 	"globals": {
-		"Components": true
+		"Components": false
 	},
 
 	"esnext": true,
